--- a/templates/header.html
+++ b/templates/header.html
@@ -73,7 +73,7 @@
                 <a
                   class="dropdown-item"
                   href="/templates/Demons/Chatiments.html"
-                  >Arc de condamnation</a
+                  >Arc de l’ère des châtiments</a
                 >
               </li>
               <li>
