--- a/templates/Demons/Chatiments.html
+++ b/templates/Demons/Chatiments.html
@@ -72,9 +72,15 @@
           </div>
         </div>
         <p style="text-align: center">Differents chapitres :</p>
-        <p style="text-align: center"><a href="#Enfants">Enfants perdus</a></p>
-        <p style="text-align: center"><a href="#Enchaines">Les enchaînés</a></p>
-        <p style="text-align: center"><a href="#Naissance">La Naissance</a></p>
+        <p style="text-align: center">
+          <a href="#Enfants">• Enfants perdus</a>
+        </p>
+        <p style="text-align: center">
+          <a href="#Enchaines">• Les enchaînés</a>
+        </p>
+        <p style="text-align: center">
+          <a href="#Naissance">• La Naissance</a>
+        </p>
         <br />
 
         <h2 id="Enfants" style="text-align: center">Les Enfants perdus</h2>
@@ -195,7 +201,7 @@
                       </div>
                       <div class="modal-body">
                         <img
-                          src="/img/Demons/Chatiments/Acier.png"
+                          src="/img/Demons/Chatiments/Rosine.png"
                           class="modal-image img-fluid"
                         />
                       </div>
@@ -222,10 +228,10 @@
             <h2 id="Enchaines" style="text-align: center">Les enchaînés</h2>
             <h3 style="text-align: center">Tomes 16 à 17</h3>
 
-            <!-- Guts contre la troupe de la chaîne de fer sacré  -->
+            <!-- Guts contre la troupe des chaîne d'acier  -->
             <li class="mangatitle">
               <h2 style="text-align: center">
-                Guts contre la troupe de la chaîne de fer sacré
+                Guts contre la troupe des chaîne d'acier
               </h2>
             </li>
 
@@ -273,7 +279,7 @@
             </div>
             <p>
               <strong> Description :</strong>
-              Les Chevaliers de la Sainte Chaîne de Fer, dirigés par Farnese,
+              Les Chevaliers de la Sainte Chaîne d'acier, dirigés par Farnese,
               sont une unité religieuse chargée de pourchasser les hérétiques.
               Guts est leur cible en raison de ses liens avec les forces
               démoniaques et son passé violent.
@@ -282,7 +288,7 @@
             <p>
               <strong> Description du Duel:</strong>
               Le combat commence lorsque Guts est repéré par les Chevaliers de
-              la Sainte Chaîne de Fer. Farnese ordonne son arrestation, mais
+              la Sainte Chaîne d'acier. Farnese ordonne son arrestation, mais
               Guts, refusant de se rendre, engage le combat. Guts affronte
               d'abord les soldats ordinaires de la troupe, les éliminant
               rapidement grâce à sa force brute et à la puissance de sa
@@ -323,6 +329,12 @@
               monde.
             </p>
             <br />
+
+            <p style="text-align: center">
+              <a href="/templates/royauté.html/#Acier">
+                Plus d'informations sur la troupe des chaîne d'acier
+              </a>
+            </p>
 
             <!-- La Nuit avec Farnese contre les Monstres  -->
             <li class="mangatitle">
@@ -466,6 +478,11 @@
                 <!-- Modal -->
               </figure>
             </div>
+            <p style="text-align: center">
+              <a href="/templates/royauté.html#Farnese">
+                Plus d'informations sur les Dame Farnese
+              </a>
+            </p>
 
             <h2 id="Naissance" style="text-align: center">La Naissance</h2>
             <h3 style="text-align: center">Tomes 17 à 21</h3>
@@ -674,6 +691,12 @@
               poursuivre sa quête de vengeance.
             </p>
             <br />
+
+            <p style="text-align: center">
+              <a href="/templates/papauté.html">
+                Plus d'informations sur les Disciples de Mozgus
+              </a>
+            </p>
 
             <!-- Guts contre Mozgus  -->
             <li class="mangatitle">
