--- a/templates/royauté.html
+++ b/templates/royauté.html
@@ -259,7 +259,7 @@
             <br />
 
             <h1 id="title">Troupe des Chaînes d'Acier</h1>
-            <div>
+            <div id="Acier">
               <figure>
                 <img
                   id="proto"
@@ -304,7 +304,9 @@
 
             <!-- Dame Farnese de Vandimion -->
             <li class="mangatitle">
-              <h2 style="text-align: center">Dame Farnese de Vandimion</h2>
+              <h2 id="Farnese" style="text-align: center">
+                Dame Farnese de Vandimion
+              </h2>
             </li>
 
             <div>
