--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -24,327 +24,8 @@
     <main id="main">
       <div class="container">
         <div>
-          <h1 id="title">Berserk</h1>
-          <p id="captioning"><em>Different Arc du manga</em></p>
-          <div>
-            <figure>
-              <img
-                id="proto"
-                src="../img/Main/Berserk.png"
-                class="center hover"
-                data-toggle="modal"
-                data-target="#berserker-img"
-              />
-              <!-- Modal -->
-              <div
-                class="modal fade"
-                id="berserker-img"
-                tabindex="-1"
-                role="dialog"
-                aria-labelledby="berserker-img"
-                aria-hidden="true"
-              >
-                <div class="modal-dialog" role="document">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <button
-                        type="button"
-                        class="close"
-                        data-dismiss="modal"
-                        aria-label="Close"
-                      >
-                        <span aria-hidden="true">&times;</span>
-                      </button>
-                    </div>
-                    <div class="modal-body">
-                      <img
-                        src="../img/Main/Main.png"
-                        class="modal-image img-fluid"
-                      />
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- Modal -->
-            </figure>
-          </div>
-        </div>
-        <br />
-
-        <div id="manga-list">
-          <ul>
-            <!-- Void -->
-            <li class="mangatitle">
-              <h2 style="text-align: center">Arc de l’épéiste noir</h2>
-            </li>
-
-            <div>
-              <figure>
-                <img
-                  id="proto"
-                  src="../img/Main/Void.png"
-                  class="center hover"
-                  data-toggle="modal"
-                  data-target="#berserker-img"
-                />
-                <!-- Modal -->
-                <div
-                  class="modal fade"
-                  id="berserker-img"
-                  tabindex="-1"
-                  role="dialog"
-                  aria-labelledby="berserker-img"
-                  aria-hidden="true"
-                >
-                  <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button
-                          type="button"
-                          class="close"
-                          data-dismiss="modal"
-                          aria-label="Close"
-                        >
-                          <span aria-hidden="true">&times;</span>
-                        </button>
-                      </div>
-                      <div class="modal-body">
-                        <img
-                          src="../img/Main/Void.png"
-                          class="modal-image img-fluid"
-                        />
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- Modal -->
-              </figure>
-            </div>
-
-            <p>
-              Il représente la sagesse et l'ordre dans le chaos. Ses actions
-              semblent guidées par une compréhension profonde et terrifiante de
-              la causalité.
-            </p>
-
-            <br />
-
-            <!-- Femto (Griffith) -->
-            <li class="mangatitle">
-              <h2 style="text-align: center">Arc de l’âge d’or</h2>
-            </li>
-            <div>
-              <figure>
-                <img
-                  id="proto"
-                  src="../img/Main/Femto.png"
-                  class="center hover"
-                  data-toggle="modal"
-                  data-target="#berserker-img"
-                />
-                <!-- Modal -->
-                <div
-                  class="modal fade"
-                  id="berserker-img"
-                  tabindex="-1"
-                  role="dialog"
-                  aria-labelledby="berserker-img"
-                  aria-hidden="true"
-                >
-                  <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button
-                          type="button"
-                          class="close"
-                          data-dismiss="modal"
-                          aria-label="Close"
-                        >
-                          <span aria-hidden="true">&times;</span>
-                        </button>
-                      </div>
-                      <div class="modal-body">
-                        <img
-                          src="../img/Main/Femto.png"
-                          class="modal-image img-fluid"
-                        />
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- Modal -->
-              </figure>
-            </div>
-
-            <p>
-              Il représente la sagesse et l'ordre dans le chaos. Ses actions
-              semblent guidées par une compréhension profonde et terrifiante de
-              la causalité.
-            </p>
-            <br />
-
-            <!-- Slan  -->
-            <li class="mangatitle">
-              <h2 style="text-align: center">Arc de condamnation</h2>
-            </li>
-            <div>
-              <figure>
-                <img
-                  id="proto"
-                  src="../img/Main/Slan.png"
-                  class="center hover"
-                  data-toggle="modal"
-                  data-target="#berserker-img"
-                />
-                <!-- Modal -->
-                <div
-                  class="modal fade"
-                  id="berserker-img"
-                  tabindex="-1"
-                  role="dialog"
-                  aria-labelledby="berserker-img"
-                  aria-hidden="true"
-                >
-                  <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button
-                          type="button"
-                          class="close"
-                          data-dismiss="modal"
-                          aria-label="Close"
-                        >
-                          <span aria-hidden="true">&times;</span>
-                        </button>
-                      </div>
-                      <div class="modal-body">
-                        <img
-                          src="../img/Main/Slan.png"
-                          class="modal-image img-fluid"
-                        />
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- Modal -->
-              </figure>
-            </div>
-
-            <p>
-              Il représente la sagesse et l'ordre dans le chaos. Ses actions
-              semblent guidées par une compréhension profonde et terrifiante de
-              la causalité.
-            </p>
-            <br />
-
-            <!-- Ubik  -->
-            <li class="mangatitle">
-              <h2 style="text-align: center">Arc du Faucon Millenium</h2>
-            </li>
-            <div>
-              <figure>
-                <img
-                  id="proto"
-                  src="../img/Main/Ubik.png"
-                  class="center hover"
-                  data-toggle="modal"
-                  data-target="#berserker-img"
-                />
-                <!-- Modal -->
-                <div
-                  class="modal fade"
-                  id="berserker-img"
-                  tabindex="-1"
-                  role="dialog"
-                  aria-labelledby="berserker-img"
-                  aria-hidden="true"
-                >
-                  <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button
-                          type="button"
-                          class="close"
-                          data-dismiss="modal"
-                          aria-label="Close"
-                        >
-                          <span aria-hidden="true">&times;</span>
-                        </button>
-                      </div>
-                      <div class="modal-body">
-                        <img
-                          src="../img/Main/Ubik.png"
-                          class="modal-image img-fluid"
-                        />
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- Modal -->
-              </figure>
-            </div>
-
-            <p>
-              Il représente la sagesse et l'ordre dans le chaos. Ses actions
-              semblent guidées par une compréhension profonde et terrifiante de
-              la causalité.
-            </p>
-            <br />
-
-            <!-- Ubik  -->
-            <li class="mangatitle">
-              <h2 style="text-align: center">Fantasia Arc</h2>
-            </li>
-            <div>
-              <figure>
-                <img
-                  id="proto"
-                  src="../img/Main/Ubik.png"
-                  class="center hover"
-                  data-toggle="modal"
-                  data-target="#berserker-img"
-                />
-                <!-- Modal -->
-                <div
-                  class="modal fade"
-                  id="berserker-img"
-                  tabindex="-1"
-                  role="dialog"
-                  aria-labelledby="berserker-img"
-                  aria-hidden="true"
-                >
-                  <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button
-                          type="button"
-                          class="close"
-                          data-dismiss="modal"
-                          aria-label="Close"
-                        >
-                          <span aria-hidden="true">&times;</span>
-                        </button>
-                      </div>
-                      <div class="modal-body">
-                        <img
-                          src="../img/Main/Ubik.png"
-                          class="modal-image img-fluid"
-                        />
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- Modal -->
-              </figure>
-            </div>
-
-            <p>
-              Il représente la sagesse et l'ordre dans le chaos. Ses actions
-              semblent guidées par une compréhension profonde et terrifiante de
-              la causalité.
-            </p>
-            <br />
-          </ul>
+          <h1 id="title">Incomming...👋🏽👋🏽</h1>
+        
         </div>
       </div>
     </main>
