--- a/templates/Demons/Faucon.html
+++ b/templates/Demons/Faucon.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
+    <meta charset="UTF-8" />
     <link href="/style/style.css" rel="stylesheet" />
     <title>Berserk ⚔</title>
     <script>
