--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
+    <meta charset="UTF-8" />
     <script>
       function loadFile(filename, elementId) {
         fetch(filename)
@@ -24,8 +25,7 @@
     <main id="main">
       <div class="container">
         <div>
-          <h1 id="title">Incomming...👋🏽👋🏽</h1>
-        
+          <h1 id="title">Incomming...</h1>
         </div>
       </div>
     </main>
